--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.21.2",
+    "react-scripts": "^3.0.1",
+    "reactstrap": "^9.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
