--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.70",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "formik": "^2.4.5",
     "react": "^18.2.0",
@@ -19,7 +20,8 @@
     "react-scripts": "^3.0.1",
     "reactstrap": "^9.2.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
